--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,12 +22,22 @@
     {
       "path": "assets/css/empreendimento.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "galeria/perspectiva/apto-48/apto-48m-home-office.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":865796,\"newSize\":904565}}"
+    },
+    {
+      "path": "galeria/perspectiva/apto-48/apto-48m-living-2-dormitorios.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":687399,\"newSize\":714112}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/css"
+      "galeria",
+      "galeria/perspectiva",
+      "galeria/perspectiva/apto-48"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
