Cta flutuante adicionado

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "assets/css/style-general.scss",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
       "path": "assets/css/style-lazer.scss",
@@ -37,7 +37,8 @@
       "assets",
       "galeria",
       "galeria/perspectiva",
-      "galeria/perspectiva/apto-48"
+      "galeria/perspectiva/apto-48",
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
