--- a/prepros-6.config
+++ b/prepros-6.config
@@ -667,7 +667,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
