Novos códigos do google

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "assets/css/style-general.scss",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/css/style-lazer.scss",
